# LibrIA

./: .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  anotações.md  main.py  main_test.cpp  requirements.txt  requirementsOld.txt  setup-droidcam.sh  setup-pipenv.sh  setup-venv.sh  setup.py  update_hearders.py
docs/: README.md
docs/api/: cam.md  linker_py.md  notes_mp4.md
scripts/: exemplo.sh
src/: cam.py  conf.py  help_droidcam.md  main.py
src/backup_tests/: ASLnetKeras.py  ASLnetTF.py  ASLnetTorch.py  ASLnet_fixed.py  CamIMAGEnet.py  GestureIMAGEnet.py  GradCam.py  camBackup.py  cam_vgg16.py  conf_fixed.py  data.py  ex_data.py  test.py  test_kaggle.py  test_kaggle_corrected.py  tf_classifier_cnn.py  vgg16.py
src/backup_tests/transformer-gpt/: README.md  conf.py  graph.py  loader.py  train.py
src/backup_tests/transformer-gpt/embedding/: token_embeddings.py
src/interfaces/: cam.cpp  test.py
src/model/filters/backup/: cam.py  (+2 more)
src/model/mediapipe_task/: main.py
src/model/test/: main.py  md_recognition.py  mediapipe_utils.py  medipipe_recognition.ipynb
src/models/: __init__.py
src/models/archs/: ASLnetKeras.py  ASLnetTF.py  ASLnetTorch.py  TranformerGPT.py  TranformerGPT_Tradutor.py  ex_data.py
src/models/transformer-gpt/: loader.py
src/saved/vgg16/: vgg16-asl-recognition-model-explainability.ipynb
src/torch_tests/: ASLnet.py  HybridASLNet.py  cam.py  conf.py
src/utils/: DataGenerator.py  JsonLogger.py  ValidCSV.py  data_extract.py  data_types.py  error_log.py  gradients.py  imports.py  perceptron.py  plot.py  plots.py  preprocessing.py
(+32 files in other folders)
